2025-08-13  Zhengyi Fu  <i@fuzy.me>

	Auto-quit reviewing the repo only when the local branch equals the
	upstream branch

	* init.el (+straight-repo-up-to-date-p): Add optional arg to check
	if the local branch is strictly equal to the upstream branch.
	(+straight-review-updated-repos): Use it in `magit-pre-refresh-hook'.

2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* early-init.el (native-comp-async-on-battery-power):
	Set to nil.

2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-review-updated-repos): Switch to next repo
	when the current repo is up-to-date.
	(+straight-repo-up-to-date-p): New function.

2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* early-init.el: Do not clear `site-run-file'.  It does not work
	since Emacs 31.

2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* init.el (LaTeX-mode-hook, latex-mode-hook): Add
	`turn-on-reftex'.

2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* init.el (emacs-startup-hook): Add
	`standard-display-unicode-special-glyphs'.

2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (+gptel-shellcheck-fix):
	Do not include all "web" tools.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	TeX configuration

	* init.el (TeX-auto-save, TeX-parse-self): Set to t;
	(TeX-master): Set default value to t.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-review-updated-repos): Fix the command used
	to check whether the branch is updated.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* init.el (mode-specific-map): Bind "C-'" to `claude-code-ide-menu'.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* init.el (+mail-to-help-gnu-emacs): New command.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* early-init.el (undo-limit, undo-strong-limit): Increase undo limit.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* init.el (+eglot-prefix-map): New keymap.  Bind to C-c l in
	`eglot-mode-map'.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* init.el (toggle-map): Bind "e" to `eglot'.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-run): Run `shell-file-name' if the